k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apijogoimobiliario
  labels:
    name: apijogoimobiliario
