k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apijogoimobiliario
  namespace: apijogoimobiliario
  labels:
    app: apijogoimobiliario
spec:
  type: ClusterIP
  selector:
    app: apijogoimobiliario
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
