k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apijogoimobiliario
  namespace: apijogoimobiliario
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: api-jogo.canada-software.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apijogoimobiliario
            port:
              number: 80
